# TAPL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config-doxygen  documentation.html
doc/: README_8md.html  README_8md_source.html  annotated.html  annotated_dup.js  classes.html  classtapl_1_1RingBuffer.html  classtapl_1_1pte_1_1EuclideanCluster.html  classtapl_1_1pte_1_1EuclideanCluster.js  classtapl_1_1pte_1_1EuclideanCluster_a7006b8b1a10af362b0001e4f36d3b4fb_icgraph.map  classtapl_1_1pte_1_1EuclideanCluster_a7006b8b1a10af362b0001e4f36d3b4fb_icgraph.md5  classtapl_1_1pte_1_1Line.html  classtapl_1_1pte_1_1Line.js  classtapl_1_1pte_1_1Plane.html  classtapl_1_1pte_1_1Plane_ad56c96d9b115a8a482e851c8139feb97_icgraph.map  classtapl_1_1pte_1_1Plane_ad56c96d9b115a8a482e851c8139feb97_icgraph.md5  classtapl_1_1viz_1_1Visualizer.html  classtapl_1_1viz_1_1Visualizer.js  cvEngine_8cpp.html  cvEngine_8cpp.js  cvEngine_8cpp__incl.map  cvEngine_8cpp__incl.md5  cvEngine_8cpp_a7f717198f1e528db1077f706c9f9c515_icgraph.map  cvEngine_8cpp_a7f717198f1e528db1077f706c9f9c515_icgraph.md5  cvEngine_8cpp_source.html  cvEngine_8hpp.html  cvEngine_8hpp.js  cvEngine_8hpp__dep__incl.map  cvEngine_8hpp__dep__incl.md5  cvEngine_8hpp__incl.map  cvEngine_8hpp__incl.md5  cvEngine_8hpp_source.html  dir_000000_000003.html  dir_000000_000004.html  dir_000002_000001.html  dir_000003_000001.html  dir_521b18387b725d73f7813f03441919c0.html  dir_521b18387b725d73f7813f03441919c0.js  dir_521b18387b725d73f7813f03441919c0_dep.map  dir_521b18387b725d73f7813f03441919c0_dep.md5  dir_6b4cdb7771b3177f1018d91291b5ca63.html  (+143 more)
docs/: README_8md.html  README_8md_source.html  annotated.html  annotated_dup.js  classLog.html  classLog.js  classLog_af5f7dbc1e04fc9256e7f644e6ace87c1_cgraph.map  classLog_af5f7dbc1e04fc9256e7f644e6ace87c1_cgraph.md5  classdate_1_1day.html  classdate_1_1day_a13d80b9efb88b988a21e5982151942f0_icgraph.map  classdate_1_1day_a13d80b9efb88b988a21e5982151942f0_icgraph.md5  classdate_1_1day_aa700d7ae926546ee100777dfeaadbb8a_icgraph.map  classdate_1_1day_aa700d7ae926546ee100777dfeaadbb8a_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds.html  classdate_1_1detail_1_1decimal__format__seconds.js  classdate_1_1detail_1_1decimal__format__seconds_a5f2f4083dfd4bbf3371cdbf015e56d2a_icgraph.map  classdate_1_1detail_1_1decimal__format__seconds_a5f2f4083dfd4bbf3371cdbf015e56d2a_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_a803d843fb5205d99bf0c39593c6f5a03_icgraph.map  classdate_1_1detail_1_1decimal__format__seconds_a803d843fb5205d99bf0c39593c6f5a03_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_a82c4e7742922db89dad3d3cffd7b3a17_icgraph.map  classdate_1_1detail_1_1decimal__format__seconds_a82c4e7742922db89dad3d3cffd7b3a17_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_aa68ea2b9e2d8d56e329e3b87b4f09fcc_icgraph.map  classdate_1_1detail_1_1decimal__format__seconds_aa68ea2b9e2d8d56e329e3b87b4f09fcc_icgraph.md5  classdate_1_1detail_1_1save__istream.html  classdate_1_1detail_1_1save__istream.js  classdate_1_1detail_1_1save__ostream.html  classdate_1_1detail_1_1save__ostream.js  classdate_1_1detail_1_1save__ostream__coll__graph.md5  classdate_1_1detail_1_1save__ostream__inherit__graph.map  classdate_1_1detail_1_1string__literal.html  classdate_1_1hh__mm__ss.html  classdate_1_1hh__mm__ss.js  classdate_1_1hh__mm__ss_a34fa85a8fec13becdcf6a34d608f1333_icgraph.map  classdate_1_1hh__mm__ss_a34fa85a8fec13becdcf6a34d608f1333_icgraph.md5  classdate_1_1hh__mm__ss_a4772bbf93556440e676b31c64e847f3b_cgraph.map  classdate_1_1hh__mm__ss_a4772bbf93556440e676b31c64e847f3b_cgraph.md5  classdate_1_1hh__mm__ss_a4ee5fb878d686792df2cfdfac893c4b4_cgraph.map  classdate_1_1hh__mm__ss_a4ee5fb878d686792df2cfdfac893c4b4_cgraph.md5  classdate_1_1hh__mm__ss_a7ac8435bd0c109ba56d6727b87c1f34f_icgraph.map  classdate_1_1hh__mm__ss_a7ac8435bd0c109ba56d6727b87c1f34f_icgraph.md5  (+782 more)
examples/: CMakeLists.txt  compute_e_matrix.cpp  compute_f_matrix.cpp  compute_pose.cpp  feature_tracking.cpp  monoVO.cpp
examples/data/calib/: statue_camera_model.yaml
examples/src/: kptsDetectionAndTracking.cpp  lidarObjectDetection.cpp  monoVO.cpp  panoramaicStitching.cpp  structureFromMotion.cpp
include/: cvEngine.hpp  dataStructures.hpp  matching2D.hpp  ptEngine.hpp  render.hpp  ringBuffer.hpp  visualization.hpp
latex/: annotated.tex  classLog.tex  classLog_af5f7dbc1e04fc9256e7f644e6ace87c1_cgraph.md5  classdate_1_1day.tex  classdate_1_1day_a13d80b9efb88b988a21e5982151942f0_icgraph.md5  classdate_1_1day_aa700d7ae926546ee100777dfeaadbb8a_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds.tex  classdate_1_1detail_1_1decimal__format__seconds_a5f2f4083dfd4bbf3371cdbf015e56d2a_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_a803d843fb5205d99bf0c39593c6f5a03_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_a82c4e7742922db89dad3d3cffd7b3a17_icgraph.md5  classdate_1_1detail_1_1decimal__format__seconds_aa68ea2b9e2d8d56e329e3b87b4f09fcc_icgraph.md5  classdate_1_1detail_1_1save__istream.tex  classdate_1_1detail_1_1save__ostream.tex  classdate_1_1detail_1_1save__ostream__coll__graph.md5  classdate_1_1detail_1_1string__literal.tex  classdate_1_1hh__mm__ss.tex  classdate_1_1hh__mm__ss_a34fa85a8fec13becdcf6a34d608f1333_icgraph.md5  classdate_1_1hh__mm__ss_a4772bbf93556440e676b31c64e847f3b_cgraph.md5  classdate_1_1hh__mm__ss_a4ee5fb878d686792df2cfdfac893c4b4_cgraph.md5  classdate_1_1hh__mm__ss_a7ac8435bd0c109ba56d6727b87c1f34f_icgraph.md5  classdate_1_1hh__mm__ss_aa849771f5162429bbdce806296c2d0c2_cgraph.md5  classdate_1_1hh__mm__ss_ac357ff882bf43e4060750be5504d6c0f_cgraph.md5  classdate_1_1hh__mm__ss_ac357ff882bf43e4060750be5504d6c0f_icgraph.md5  classdate_1_1hh__mm__ss_ac980f2b7e26e4f01e3dd1603af7579a9_cgraph.md5  classdate_1_1hh__mm__ss_ac980f2b7e26e4f01e3dd1603af7579a9_icgraph.md5  classdate_1_1month.tex  classdate_1_1month__day.tex  classdate_1_1month__day__last.tex  classdate_1_1month__day__last_a2d3d4b66a6832d9b86a6d30fef6cbf2a_cgraph.md5  classdate_1_1month__weekday.tex  (+319 more)
scripts/: calibrate_cam.py  (+1 more)
(+250 files in other folders)
